Templates iniciais estão prontos.

--- a/periscope-web/src/main/webapp/template/footer.xhtml
+++ b/periscope-web/src/main/webapp/template/footer.xhtml
@@ -5,14 +5,11 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
+<f:view contentType="text/html">
+	<h:form>
 
-<ui:composition template="/template/template.xhtml">
-
-	<ui:define name="content">
-		<center>
-			<h1>Periscope</h1>
-		</center>
-	</ui:define>
-
-</ui:composition>
+		<h:outputText value="Desenvolvido pelo grupo TIPI do Instituto de Computação da UFMT "/>
+		<br />		
+	</h:form>
+</f:view>
 </html>
