Mais mudanças no template.

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -7,22 +7,24 @@
 
 <f:view contentType="text/html">
 
-	<h:form>
-
-		<p:panelMenu autoDisplay="false">
-
-			<p:submenu label="Projetos" icon="ui-icon-clipboard">
-				
-				<p:menuitem value="Teste" icon="ui-icon-clock" ajax="false" />
-
-				<p:menuitem value="Teste 2"
-					icon="ui-icon-refresh" ajax="false" />
-
-			</p:submenu>
-
-		</p:panelMenu>
-
-	</h:form>
+	<div class="well">
+		<h:form>
+	
+			<p:panelMenu autoDisplay="false">
+	
+				<p:submenu  label="Projetos" icon="ui-icon-clipboard">
+					
+					<p:menuitem value="Teste" icon="ui-icon-clock" ajax="false" />
+	
+					<p:menuitem value="Teste 2"
+						icon="ui-icon-refresh" ajax="false" />
+	
+				</p:submenu>
+	
+			</p:panelMenu>
+	
+		</h:form>
+	</div>
 </f:view>
 
 </html>
