--- a/periscope-web/src/main/webapp/template/template.xhtml
+++ b/periscope-web/src/main/webapp/template/template.xhtml
@@ -36,8 +36,10 @@
 						<ui:include src="/template/sidebar.xhtml" />
 					</div>
 					<div class="span10">
-						<div class="container" style="padding-top: 30px">
-							<ui:insert name="content" />
+						<div class="container">
+							<div class="well">
+								<ui:insert name="content" />
+							</div>
 						</div>
 					</div>
 				</div>
