--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -20,7 +20,16 @@
 						icon="ui-icon-refresh" ajax="false" />
 	
 				</p:submenu>
+														
+				<p:submenu  label="Patentes" icon="ui-icon-clipboard">
+					
+					<p:menuitem value="Listar" icon="ui-icon-clock" ajax="false" />
 	
+					<p:menuitem value="Importar dados"
+						icon="ui-icon-refresh" ajax="false" />
+	
+				</p:submenu>
+				
 			</p:panelMenu>
 	
 		</h:form>
