--- a/periscope-web/src/main/webapp/template/menu.xhtml
+++ b/periscope-web/src/main/webapp/template/menu.xhtml
@@ -3,24 +3,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:p="http://primefaces.org/ui">
 
 <f:view contentType="text/html">
 
 	<div class="navbar navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<h:link action="index" styleClass="brand">Periscope</h:link>
-				<div class="pull-right" style="margin-top:10px; margin-bottom:0px; padding : 0px;">
-					<h:form style="margin:0px">
+		<h:form style="margin:0px">
+			<div class="navbar-inner">
+				<div class="container">				
+					<h:commandLink action="projectList" styleClass="brand">Periscope</h:commandLink>
+					<ul class="nav">
+						<li class="divider-vertical"></li>
+      					<li class="#{fn:indexOf(view.viewId,'projectList') > 0 ? 'active' : ''}">
+      						<h:commandLink action="projectList" value="Projetos"/>
+      					</li>	      							      				
+    				</ul>
+    				<ul class="nav pull-right"> 
+    					<li>
+    						<h:commandLink action="logout" value="Log Out"/>
+    					</li>
+    				</ul>
+					<div class="pull-right" style="margin-top:10px; margin-bottom:0px; padding : 0px;">						
 						<h:selectOneMenu value="#{language.localString}" onchange="submit()" 
 											valueChangeListener="#{ language.localeCodeChanged }" >				
 							<f:selectItems value="#{ language.locales }"/>
-						</h:selectOneMenu>
-					</h:form>
-				</div>
-			</div>			
-		</div>
+						</h:selectOneMenu>	
+											
+					</div>
+				</div>			
+			</div>
+		</h:form>
 	</div>
 	
 </f:view>
