Algumas mudanças no model e CRUD de usuário.

--- a/periscope-web/src/main/webapp/template/menu.xhtml
+++ b/periscope-web/src/main/webapp/template/menu.xhtml
@@ -17,6 +17,9 @@
 						<li class="divider-vertical"></li>
       					<li class="#{fn:indexOf(view.viewId,'projectList') > 0 ? 'active' : ''}">
       						<h:commandLink action="projectList" value="Projetos"/>
+      					</li>
+      					<li class="#{fn:indexOf(view.viewId,'userList') > 0 ? 'active' : ''}">
+      						<h:commandLink action="userList" value="Usuários"/>
       					</li>	      							      				
     				</ul>
     				<ul class="nav pull-right"> 
