--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -23,9 +23,9 @@
 														
 				<p:submenu  label="Patentes" icon="ui-icon-clipboard">
 					
-					<p:menuitem value="Listar" icon="ui-icon-clock" ajax="false" />
+					<p:menuitem value="Listar" action="listPatent" icon="ui-icon-clock" ajax="false" />
 	
-					<p:menuitem value="Importar dados"
+					<p:menuitem value="Importar dados" action="importPatent"
 						icon="ui-icon-refresh" ajax="false" />
 	
 				</p:submenu>
