--- a/periscope-web/src/main/webapp/template/template.xhtml
+++ b/periscope-web/src/main/webapp/template/template.xhtml
@@ -31,7 +31,7 @@
 						<ui:include src="/template/menu.xhtml" />
 					</div>
 				</div>
-				<div class="row-fluid" style="padding-top: 40px;">
+				<div class="row-fluid" style="padding-top: 40px;margin-bottom:40px;padding-bottom:40px;">
 					<div class="span2">
 						<ui:include src="/template/sidebar.xhtml" />
 					</div>
