Validações e restrições de acesso na criação de projetos e usuários. Modelagem das patentes quase completo.

--- a/periscope-web/src/main/webapp/template/menu.xhtml
+++ b/periscope-web/src/main/webapp/template/menu.xhtml
@@ -25,7 +25,7 @@
     				<ul class="nav pull-right"> 
     					<li>
     						<h:panelGroup rendered="#{sessionBean.loggedIn}">
-   								<a>#{sessionBean.currentUser}</a>
+   								<a>#{currentUser}</a>
 							</h:panelGroup>    						
     					</li>
     					<li>
