--- a/periscope-web/src/main/webapp/template/template.xhtml
+++ b/periscope-web/src/main/webapp/template/template.xhtml
@@ -33,13 +33,12 @@
 				</div>
 				<div class="row-fluid" style="padding-top: 40px;margin-bottom:40px;padding-bottom:40px;">
 					<div class="span2">
+						<ui:include src="/template/projectInfo.xhtml" />
 						<ui:include src="/template/sidebar.xhtml" />
 					</div>
-					<div class="span10">
-						<div class="container">
-							<div class="well">
-								<ui:insert name="content" />
-							</div>
+					<div class="span10">						
+						<div class="well">
+							<ui:insert name="content" />
 						</div>
 					</div>
 				</div>
