--- a/periscope-web/src/main/webapp/template/template.xhtml
+++ b/periscope-web/src/main/webapp/template/template.xhtml
@@ -48,6 +48,7 @@
 			</div>
 		</div>		
 	</h:body>
+	<script type="text/javascript" src="#{facesContext.externalContext.request.contextPath}/js/bootstrap.min.js"/>	
 	<ui:insert name="moreScripts">
 
 	</ui:insert>
