Importando dados e criando indices com o lucene para os dados inseridos.

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -18,6 +18,9 @@
 	
 					<p:menuitem value="Importar dados" action="importPatent"
 						icon="ui-icon-refresh" ajax="false" />
+					
+					<p:menuitem value="Harmonizar dados" action="harmonizationHome"
+						icon="ui-icon-refresh" ajax="false" />
 	
 				</p:submenu>
 				
