Criação e aplicação de regras de harmonização.

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -18,8 +18,8 @@
 	
 					<p:menuitem value="Importar dados" action="importPatent"
 						icon="ui-icon-refresh" ajax="false" />
-					
-					<p:menuitem value="Harmonizar dados" action="harmonizationHome"
+															
+					<p:menuitem value="Harmonizar dados" action="listRule"
 						icon="ui-icon-refresh" ajax="false" />
 	
 				</p:submenu>
