--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -10,7 +10,27 @@
 	<div class="well">
 		<h:form>
 	
-			<p:panelMenu >									
+			<p:panelMenu style="width:95%">									
+				<p:submenu label="Relatórios" icon="ui-icon-clipboard" > 					
+					
+					<p:submenu label="Visão Geral" icon="ui-icon-clipboard" > 					
+					
+						<p:menuitem value="Principais Depositantes" action="mainApplicantReport"  
+							icon="ui-icon-clock" ajax="false" />
+		
+						<p:menuitem value="Principais Inventores" action="mainInventorReport"
+							icon="ui-icon-refresh" ajax="false" />
+																
+						<p:menuitem value="Principais Classificações" action="mainIPCReport"
+							icon="ui-icon-refresh" ajax="false" />
+							
+						<p:menuitem value="Depósitos por Data" action="applicationDateReport"
+							icon="ui-icon-refresh" ajax="false" />
+							
+					</p:submenu>
+				</p:submenu>				
+			</p:panelMenu>
+			<p:panelMenu style="width:95%">									
 				<p:submenu label="Patentes" icon="ui-icon-clipboard" > 					
 					
 					<p:menuitem value="Listar" action="listPatent"  
@@ -21,10 +41,8 @@
 															
 					<p:menuitem value="Harmonizar dados" action="listRule"
 						icon="ui-icon-refresh" ajax="false" />
-	
-				</p:submenu>
-				
-			</p:panelMenu>	
+				</p:submenu>				
+			</p:panelMenu>		
 		</h:form>
 	</div>
 </f:view>
