Implementado a parte de harmonização de inventores e mudança no redirecionamento da pagina ao clicar em Harmonizar dados

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -39,7 +39,7 @@
 					<p:menuitem value="Importar dados" action="importPatent"
 						icon="ui-icon-refresh" ajax="false" />
 															
-					<p:menuitem value="Harmonizar dados" action="listRule"
+					<p:menuitem value="Harmonizar dados" action="harmonizationHome"
 						icon="ui-icon-refresh" ajax="false" />
 				</p:submenu>				
 			</p:panelMenu>		
