--- a/periscope-web/src/main/webapp/style/principal.css
+++ b/periscope-web/src/main/webapp/style/principal.css
@@ -5,18 +5,19 @@ body {
    height:100%;   
    background-image: url(../imgs/background.jpg);	
 }
+
 #container {
    min-height:100%;
    position:relative;   
 }
-//Fundo da página
-#body {
+
+/*#body {
     
   padding-top: 20px;   
   background-color : gray; 
   padding-bottom:40px;
   
-}
+}*/
 
 .navbar.brand {
 	
