--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -26,6 +26,9 @@
 							
 						<p:menuitem value="Depósitos por Data" action="applicationDateReport"
 							icon="ui-icon-refresh" ajax="false" />
+						
+                                                <p:menuitem value="País de Prioridade" action="priorityCountry"
+							icon="ui-icon-refresh" ajax="false" />
 							
 					</p:submenu>
 				</p:submenu>				
