--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -29,6 +29,9 @@
 						
                                                 <p:menuitem value="País de Prioridade" action="priorityCountry"
 							icon="ui-icon-refresh" ajax="false" />
+                                                
+                                                <p:menuitem value="Data de Prioridade" action="priorityDate"
+							icon="ui-icon-refresh" ajax="false" />
 							
 					</p:submenu>
 				</p:submenu>				
