O menu de Relatórios não aparece se não houver Patentes no Projeto.

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -11,7 +11,7 @@
 		<h:form>
 	
 			<p:panelMenu style="width:95%">									
-				<p:submenu label="Relatórios" icon="ui-icon-clipboard" > 					
+                            <p:submenu label="Relatórios" icon="ui-icon-clipboard" rendered="#{sideBarController.renderer}"> 					
 					
 					<p:submenu label="Visão Geral" icon="ui-icon-clipboard" > 					
 					
