Admin têm poderes admnistrativos.

--- a/periscope-web/src/main/webapp/components/filtro.xhtml
+++ b/periscope-web/src/main/webapp/components/filtro.xhtml
@@ -29,7 +29,7 @@
         <h:outputScript library="js" name="locales.js"></h:outputScript>
 
         <h:panelGrid columns="7" cellpadding="5">  
-            <h:outputText value="Defina o período de interesse:"/> 
+            <h:outputText value="Período de interesse:"/> 
             <p:selectOneMenu value="#{controller.filtro.selecionaData}">
                 <f:selectItem itemLabel="Data de Publicação" itemValue="0" />  
                 <f:selectItem itemLabel="Data de Depósito" itemValue="1" />  
