--- a/periscope-web/src/main/webapp/components/filtro.xhtml
+++ b/periscope-web/src/main/webapp/components/filtro.xhtml
@@ -29,21 +29,21 @@
         <h:outputScript library="js" name="locales.js"></h:outputScript>
 
         <h:panelGrid columns="7" cellpadding="5">  
-            <h:outputText value="Período de interesse:"/> 
+            <h:outputText value="#{msgs['period.interest']}:"/> 
             <p:selectOneMenu value="#{controller.filtro.selecionaData}">
-                <f:selectItem itemLabel="Data de Publicação" itemValue="0" />  
-                <f:selectItem itemLabel="Data de Depósito" itemValue="1" />  
+                <f:selectItem itemLabel="#{msgs['publication.date']}" itemValue="0" />  
+                <f:selectItem itemLabel="#{msgs['application.date']}" itemValue="1" />  
 
             </p:selectOneMenu>
-            <h:outputText value="Inicial:"/>
-            <p:calendar  value="#{controller.filtro.inicio}" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
+            <h:outputText value="#{msgs['from']}:"/>
+            <p:calendar  value="#{controller.filtro.inicio}" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="#{msgs['date.pattern']}">
             </p:calendar>
 
-            <h:outputText value="Final:"/>
-            <p:calendar value="#{controller.filtro.fim}" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="dd/MM/yyyy">
+            <h:outputText value="#{msgs['to']}:"/>
+            <p:calendar value="#{controller.filtro.fim}" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="#{msgs['date.pattern']}">
             </p:calendar>
 
-            <p:commandButton action="#{controller.refreshChart()}" update="tudo" value="Pesquisar"></p:commandButton>
+            <p:commandButton action="#{controller.refreshChart()}" update="tudo" value="#{msgs['update']}"></p:commandButton>
         </h:panelGrid>
     </ui:composition>
 </html>
