--- a/periscope-web/src/main/webapp/resources/css/screen.css
+++ b/periscope-web/src/main/webapp/resources/css/screen.css
@@ -13,6 +13,13 @@ body {
     background: #FFFFFF url(#{request.contextPath}/resources/gfx/banner.png) no-repeat;
     padding-top: 110px;
 }
+#nonAjaxLoad {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+}
 #sidebar {
     font-size: 0.9em;
     width: 225px;
