Adicionado visualização do numero da build

--- a/periscope-web/src/main/webapp/template/footer.xhtml
+++ b/periscope-web/src/main/webapp/template/footer.xhtml
@@ -9,7 +9,8 @@
 	<h:form>
 
 		<h:outputText value="Desenvolvido pelo grupo TIPI do Instituto de Computação da UFMT "/>
-		<br />		
+		<br />
+                <h:outputText value="#{msgs['build.value']}"/>
 	</h:form>
 </f:view>
 </html>
