Não há mais a possibilidade de cadastrar natureza no inventor. Mudança no estilo do build no footer.

--- a/periscope-web/src/main/webapp/template/footer.xhtml
+++ b/periscope-web/src/main/webapp/template/footer.xhtml
@@ -10,7 +10,7 @@
 
 		<h:outputText value="Desenvolvido pelo grupo TIPI do Instituto de Computação da UFMT "/>
 		<br />
-                <h:outputText value="#{msgs['build.value']}"/>
+                <h:outputText value="#{msgs['build.value']}" style="color: #999999; font-style: italic"/>
 	</h:form>
 </f:view>
 </html>
