Adicionado tabela de documentos de prioridade nacional

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -32,6 +32,9 @@
                                                 
                                                 <p:menuitem value="#{msgs['priority.date']}" action="priorityDate"
 							icon="ui-icon-refresh" ajax="false" />
+                                                
+                                                <p:menuitem value="#{msgs['docsOfNationalPriority']}" action="docsOfNationalPriority"
+							icon="ui-icon-refresh" ajax="false" />
 							
 					</p:submenu>
 				</p:submenu>				
