Adicionado o gráfico de perfil tecnologico

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -35,6 +35,9 @@
                                                 
                                                 <p:menuitem value="#{msgs['docsOfNationalPriority']}" action="docsOfNationalPriority"
 							icon="ui-icon-refresh" ajax="false" />
+                                                
+                                                <p:menuitem value="#{msgs['technologicalProfile']}" action="mainTechnologicalProfile"
+							icon="ui-icon-refresh" ajax="false" />
 							
 					</p:submenu>
 				</p:submenu>				
