Adicionado grafico Natureza dos Depositantes

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -35,8 +35,12 @@
                                                 
                                                 <p:menuitem value="#{msgs['docsOfNationalPriority']}" action="docsOfNationalPriority"
 							icon="ui-icon-refresh" ajax="false" />
+
                                                 
                                                 <p:menuitem value="#{msgs['technologicalProfile']}" action="mainTechnologicalProfile"
+
+                                                <p:menuitem value="#{msgs['natureDepositor']}" action="natureApplicant"
+
 							icon="ui-icon-refresh" ajax="false" />
 							
 					</p:submenu>
