--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -40,6 +40,8 @@
                             <p:menuitem value="#{msgs['technologicalProfile']}" action="mainTechnologicalProfile" icon="ui-icon-refresh" ajax="false" />
 
                             <p:menuitem value="#{msgs['natureDepositor']}" action="natureApplicant" icon="ui-icon-refresh" ajax="false" />
+                            
+                            <p:menuitem value="#{msgs['stateDistribuition']}" action="stateDistribuition" icon="ui-icon-refresh" ajax="false" />
 
                         </p:submenu>
                     </p:submenu>				
