Distribuição Regional adicionado

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -42,6 +42,9 @@
                             <p:menuitem value="#{msgs['natureDepositor']}" action="natureApplicant" icon="ui-icon-refresh" ajax="false" />
                             
                             <p:menuitem value="#{msgs['stateDistribuition']}" action="stateDistribuition" icon="ui-icon-refresh" ajax="false" />
+                            
+                            <p:menuitem value="#{msgs['regionDistribuition']}" action="regionDistribuition" icon="ui-icon-refresh" ajax="false" />
+                            
 
                         </p:submenu>
                     </p:submenu>				
