Adicionado grafico data de publicação

--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -33,6 +33,10 @@
                             <p:menuitem value="#{msgs['priority.date']}" action="priorityDate"
                                         icon="ui-icon-refresh" ajax="false" />
 
+                            <p:menuitem value="#{msgs['publication.date']}" action="publicationDate"
+                                        icon="ui-icon-refresh" ajax="false" />
+
+
                             <p:menuitem value="#{msgs['docsOfNationalPriority']}" action="docsOfNationalPriority"
                                         icon="ui-icon-refresh" ajax="false" />
 
@@ -40,11 +44,11 @@
                             <p:menuitem value="#{msgs['technologicalProfile']}" action="mainTechnologicalProfile" icon="ui-icon-refresh" ajax="false" />
 
                             <p:menuitem value="#{msgs['natureDepositor']}" action="natureApplicant" icon="ui-icon-refresh" ajax="false" />
-                            
+
                             <p:menuitem value="#{msgs['stateDistribuition']}" action="stateDistribuition" icon="ui-icon-refresh" ajax="false" />
-                            
+
                             <p:menuitem value="#{msgs['regionDistribuition']}" action="regionDistribuition" icon="ui-icon-refresh" ajax="false" />
-                            
+
 
                         </p:submenu>
                     </p:submenu>				
