--- a/periscope-web/src/main/webapp/components/filtro.xhtml
+++ b/periscope-web/src/main/webapp/components/filtro.xhtml
@@ -30,19 +30,18 @@
 
         <h:panelGrid columns="2" cellpadding="5">  
             <h:outputText value="#{msgs['period.interest']}:"/> 
-            <p:selectOneMenu value="#{controller.filtro.selecionaData}">
-                <f:selectItem itemLabel="#{msgs['publication.date']}" itemValue="0" />  
-                <f:selectItem itemLabel="#{msgs['application.date']}" itemValue="1" />  
-
+            <p:selectOneMenu value="#{controller.filtro.selecionaData}" id="selDate"  valueChangeListener="#{controller.selectListener}">
+                <f:selectItem itemLabel="#{msgs['publication.date']}" itemValue="1" /> 
+                <f:selectItem itemLabel="#{msgs['application.date']}" itemValue="2" />  
+                <p:ajax event="change" update="tudo"/>
             </p:selectOneMenu>
 
-
-            <h:outputText value="#{msgs['from']}:"/>
-            <p:calendar  value="#{controller.filtro.inicio}" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="#{msgs['date.pattern']}">
+            <h:outputText value="#{msgs['from']}:" />
+            <p:calendar  value="#{controller.filtro.inicio}" id="from" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="#{msgs['date.pattern']}">
             </p:calendar>
 
-            <h:outputText value="#{msgs['to']}:"/>
-            <p:calendar value="#{controller.filtro.fim}" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="#{msgs['date.pattern']}">
+            <h:outputText value="#{msgs['to']}:" />
+            <p:calendar value="#{controller.filtro.fim}" id="to" maxlength="10" mindate="#{controller.minDate}" maxdate="#{controller.maxDate}" locale="#{msgs['calendar']}" showButtonPanel="true" navigator="true" pattern="#{msgs['date.pattern']}">
             </p:calendar>
 
             <p:commandButton action="#{controller.refreshChart()}" update="tudo" value="#{msgs['update']}"></p:commandButton>
