Adicionado Filtro de Pesquisa na Harmonização

--- a/periscope-web/src/main/webapp/template/footer.xhtml
+++ b/periscope-web/src/main/webapp/template/footer.xhtml
@@ -8,7 +8,7 @@
 <f:view contentType="text/html">
 	<h:form>
 
-		<h:outputText value="Desenvolvido pelo grupo TIPI do Instituto de Computação da UFMT "/>
+            <h:outputText value="#{msgs['developed.by']}"/>
 		<br />
                 <h:outputText value="#{msgs['build.value']}" style="color: #999999; font-style: italic"/>
 	</h:form>
