--- a/periscope-web/src/main/webapp/template/sidebar.xhtml
+++ b/periscope-web/src/main/webapp/template/sidebar.xhtml
@@ -64,6 +64,10 @@
 
                         <p:menuitem value="#{msgs['harmonize.data']}" action="harmonizationHome"
                                     icon="ui-icon-refresh" ajax="false" rendered="#{(currentProject.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or currentProject.observers.contains(currentUser)) and (not sidebarController.emptyPatent)}"/>
+                        <p:menuitem value="#{msgs['add.patent']}" action="addPatent"
+                                    icon="ui-icon-pencil" ajax="false" rendered="#{(currentProject.owner.id eq currentUser.id or currentUser.userLevel.accessLevel == 10 or currentProject.observers.contains(currentUser))}">
+                            <f:param name="patentAdd" value="add" />
+                        </p:menuitem>
                     </p:submenu>				
                 </p:panelMenu>		
             </h:form>
